[tool.poetry]
name = "TabularRAG"
version = "0.1.0"
description = "RAG adoptation fro tabular data"
authors = ["Ulvi Movsum-zada"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.1.2"
pandas = "2.2.3"
torchvision = "0.17.2"
scikit_learn = "1.5.2"
torch = "2.2.2"
openml = "0.15.0"
ucimlrepo = "0.0.7"
datasets = "3.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
